--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.0",
-    "react-hot-loader": "^1.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
@@ -39,6 +38,7 @@
     "node-sass": "^3.4.2",
     "node-uuid": "^1.4.7",
     "react-addons-test-utils": "^0.14.7",
+    "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.1.2",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
