--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
+    "deep-freeze-strict": "^1.1.1",
     "eslint": "^3.3.0",
     "eslint-plugin-react": "^6.0.0",
     "expect": "^1.14.0",
