--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "node-uuid": "^1.4.7",
     "react-addons-test-utils": "^0.14.7",
     "react-hot-loader": "^1.3.0",
+    "redux": "^3.3.1",
     "sass-loader": "^3.1.2",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
