--- a/package.json
+++ b/package.json
@@ -49,8 +49,6 @@
     "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
     "react-addons-test-utils": "^0.14.7",
-    "redux-mock-store": "^1.0.3",
-    "react-hot-loader": "^1.3.0",
-    "webpack-dev-server": "^1.14.1"
+    "redux-mock-store": "^1.0.3"
   }
 }
